mainfests/mario-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mario-service
spec:
  selector:
    app: mario # your selector must match your label on your depolyment 
     
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80 # targets the container port on which the application listens 
  type: ClusterIP
